--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="wrapper">
 			<div id="header">
-				<h1 class="logo">Mein name ist Samed</h1>
+				<h1 class="logo">Mein name ist Samed!</h1>
 			</div>
 			<nav>
 				<ul>
