--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 			<div id="header">
 				<h1 class="logo">Mein name ist Samed!</h1>
 			</div>
+            <form>
+            Dein Name:<br> 
+            <input type="text"><br>
+            Dein Anliegen<br>
+            <textarea></textarea><br>
+            <input type="submit" value "Abschicken!">
+            </form>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
