--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<div id="header">
 				<h1 class="logo">Mein name ist Samed!</h1>
 			</div>
+            <p>Kontaktieren sie mich unter: abdu@gmail.com</p>
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
